# claude-mlx-tts

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEV.md  INSTALL.md  LICENSE  README.md  RECORDING.md  TROUBLESHOOTING.md  pyproject.toml  pyrightconfig.json
.beads/: .gitignore  config.yaml  issues.jsonl  last-touched  metadata.json
.claude-plugin/: marketplace.json  plugin.json
assets/: alex.safetensors  c3po.safetensors  default.safetensors  dwight.safetensors  jerry.safetensors  scarlett.safetensors  snoop.safetensors  yamon.safetensors
commands/: say.md  summary-say.md  tts-config.md  tts-init.md  tts-mute.md  tts-start.md  tts-status.md  tts-stop.md
docs/: PLUGIN-COMMAND-MIGRATION.md
hooks/: approve-tts.py  hooks.json  permission-notify.py  permission_notify.py  run-permission-notify.sh
scripts/: audio_processor.py  clone_voice.py  mlx_server_utils.py  mlx_tts_core.py  plugin_logging.py  run-tts.sh  say.sh  streaming_proof.py  streaming_wav_parser.py  summary-say.sh  tts-config.sh  tts-init.sh  tts-mute.sh  tts-notify.py  tts-start.sh  tts-status.sh  tts-stop.sh  tts_config.py  tts_mute.py  tts_server.py  tts_tui.py  voice_cache.py
tests/: test_audio_processor.py  test_mlx_tts.py  test_permission_notify.py  test_server_lifecycle.py  test_streaming_tts.py  test_voice_cache.py
tests/integration/: test_clone_voice_integration.py  test_mlx_tts_integration.py  test_streaming_tts_integration.py  test_tts_config_integration.py  test_voice_cache_integration.py
tests/unit/: test_audio_processor.py  test_clone_lab_autocomplete.py  test_clone_voice.py  test_mlx_tts.py  test_permission_notify.py  test_preview_widget.py  test_server_lifecycle.py  test_streaming_audio_player.py  test_streaming_http_client.py  test_streaming_tts.py  test_streaming_wav_parser.py  test_tts_config.py  test_tts_mute.py  test_tts_server_streaming.py  test_voice_cache.py  test_voice_crud.py  test_voice_crud_tui.py  test_voice_specific_processor.py
