[project]
name = "claude-mlx-tts"
version = "1.1.0"
description = "Voice-cloned TTS notifications for Claude Code using MLX Chatterbox Turbo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "aperepel" }]
keywords = ["tts", "voice-cloning", "mlx", "chatterbox", "claude", "apple-silicon"]

# No core dependencies - default uses macOS 'say' command
dependencies = []

[project.optional-dependencies]
# MLX voice cloning on Apple Silicon (for local dev/testing)
mlx = [
    "mlx-audio>=0.2.9",
]

[tool.uv]
# This is a plugin/script, not an installable Python package
package = false
