[project]
name = "claude-mlx-tts"
version = "1.3.0"
description = "Voice-cloned TTS notifications for Claude Code using MLX Chatterbox Turbo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "aperepel" }]
keywords = ["tts", "voice-cloning", "mlx", "chatterbox", "claude", "apple-silicon"]

# No core dependencies - default uses macOS 'say' command
dependencies = []

[project.optional-dependencies]
# MLX voice cloning on Apple Silicon (for local dev/testing)
mlx = [
    "mlx-audio>=0.2.9",
    "librosa>=0.10",     # Required by chatterbox_turbo model
    "mlx-lm>=0.22",      # Required for GPT2 cache in chatterbox_turbo
    "einops>=0.8",       # Required by codec models
    "sounddevice>=0.5",  # Required for audio playback
    "pedalboard>=0.9",   # Required for audio compression/limiting
    "requests>=2.31",    # Required for HTTP TTS server communication
    "uvicorn>=0.30",     # Required for mlx_audio.server
    "fastapi>=0.111",    # Required for mlx_audio.server
    "python-multipart",  # Required for FastAPI file uploads
    "webrtcvad>=2.0.10", # Required for mlx_audio.server
    "setuptools",        # Required by webrtcvad (pkg_resources)
    "textual>=6.11",     # Required for TTS configuration TUI
    "textual-autocomplete>=4.0.6",  # Clone Lab path autocomplete
]
# Development dependencies
dev = [
    "pytest>=8.0",
]

[tool.uv]
# This is a plugin/script, not an installable Python package
package = false

[tool.pytest.ini_options]
# Directory-based test organization:
# - tests/unit/       - Fast, isolated unit tests (run by default)
# - tests/integration/ - Tests requiring MLX, audio hardware, or server processes
testpaths = ["tests/unit"]
# To run all tests including integration: uv run pytest tests/
# To run only integration tests: uv run pytest tests/integration/

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "types-requests>=2.32.4.20250913",
]
